--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -132,9 +132,10 @@ these generators giving relators for a finitely presented  group,  and
 <sgens> the list of subgroup generators, again expressed as  words  in
 the free generators. All these are given in the standard {\GAP} format
 (see Chapter~"ref:Finitely Presented Groups" of the  {\GAP}  Reference
-Manual). Note that `ACECosetTable' may be called with 0 or 1 arguments
-after  a  call  to  `ACEStart',  in  which  case  it  is  being   used
-interactively     (see     Section~"Using      ACE      Interactively"
+Manual). Note that the 3-argument form  of  `ACECosetTable'  described
+here is merely a synonym for `ACECosetTableFromGensAndRels', and  that
+`ACECosetTable' may be called in a different  way  in  an  interactive
+{\ACE}    session    (see    Sections~"Using    ACE     Interactively"
 and~"ACECosetTableI").
 
 Behind the colon any  selection  of  the  options  available  for  the
@@ -150,16 +151,20 @@ a discussion regarding global and local passing of  options,  and  the
 non-orthogonal nature of {\ACE}'s options.
 
 Each of `ACECosetTableFromGensAndRels' and `ACECosetTable'  calls  the
-{\ACE} binary and, if successful, returns a standardised coset  table,
-as a {\GAP} list of lists. One of two  standardisations  is  possible:
-the default is {\GAP}'s default  standardisation;  the  other  is  the
-`lenlex' scheme and is selected via the `lenlex'  option  (see~"option
-lenlex"). For a detailed discussion of these standardisation  schemes,
-see  Section~"Coset  Table  Standardisation   Schemes".   We   provide
-`IsACEStandardCosetTable' (see~"IsACEStandardCosetTable") to determine
-whether a table (list of lists) is standardised relative  to  {\GAP}'s
-default standardisation, or with the `lenlex' option, relative to  the
-`lenlex' scheme.
+{\ACE} binary and, if successful, returns a standard coset table, as a
+{\GAP} list of  lists.  At  the  time  of  writing,  two  coset  table
+standardisations schemes were possible: `lenlex' and `semilenlex' (see
+Section~"Coset Table Standardisation Schemes"). The user  may  control
+which standardisation scheme is used by selecting either the  `lenlex'
+(see~"option  lenlex")  or  `semilenlex'   (see~"option   semilenlex")
+option; otherwise the table  is  standardised  according  to  {\GAP}'s
+default standardisation scheme which is `semilenlex'  for  {\GAP}~4.2,
+or the value of `CosetTableStandard' (which by  default  is  `lenlex')
+for  {\GAP}~4.3  (or  later).  We  provide   `IsACEStandardCosetTable'
+(see~"IsACEStandardCosetTable") to determine whether a table (list  of
+lists)  is  standard  relative  to  {\GAP}'s  default  standardisation
+scheme, or with the use of options (e.g.~`lenlex' or `semilenlex')  to
+another standardisation scheme.
 
 If the determination of a coset table is unsuccessful, then one of the
 following occurs:
@@ -213,6 +218,8 @@ option `max := 2' (see~"option max"), so that  the  coset  enumeration
 has only two coset numbers to play with and hence is bound to fail  to
 complete, putting us in a `break'-loop.
 
+{\undoquotes\atindex{ACECosetTable, break-loop example}
+{@`ACECosetTable', `break'-loop example}}
 \beginexample
 gap> ACECosetTable(fgens, rels, [c] : max := 2);
 Error : No coset table ... at
@@ -274,53 +281,6 @@ gap> ACECosetTable(fgens, rels, [c] : purec);
 {\ACE} needs to define a `t'otal number of only  (relatively-speaking)
 332 coset numbers before the final collapse to 1 coset number.
 
-For an already  calculated  coset  table,  we  provide  the  following
-function to determine whether or not it has been standardised.
-
-\>IsACEStandardCosetTable( <table> ) F
-
-returns  `true'  if  <table>  (a  list  of  lists  of   integers)   is
-standardised according to {\GAP}'s default standardisation scheme, and
-`false' otherwise; and
-
-\>IsACEStandardCosetTable( <table> : lenlex ) F
-
-returns  `true'  if  <table>  (a  list  of  lists  of   integers)   is
-standardised  according  to  the   `lenlex'{\undoquotes\atindex{lenlex
-standardisation   scheme}    {@`lenlex'    standardisation    scheme}}
-standardisation scheme,  and  `false'  otherwise.  See  Section~"Coset
-Table Standardisation Schemes"  for  a  detailed  discussion  of  both
-standardisation schemes.
-
-*Note:*
-Essentially, `IsACEStandardCosetTable'  extends  the  {\GAP}  function
-`IsStandardized', by providing the option `lenlex'.
-
-Users     who     wish     their     coset      tables      to      be
-`lenlex'{\undoquotes\atindex{lenlex standardisation scheme} {@`lenlex'
-standardisation scheme}} standardised should  be  aquainted  with  the
-following function.
-
-\>IsACEGeneratorsInPreferredOrder( <gens>, <rels> ) F
-\label{IsACEGeneratorsInPreferredOrderNI}
-
-returns `true' if <gens>, a list of free group generators, are in  the
-order preferred by {\ACE}, for the group  with  presentation  $\langle
-<gens> \mid  <rels>\rangle$,  where  <rels>  is  a  list  of  relators
-(i.e.~words         in         the         generators         <gens>).
-`IsACEGeneratorsInPreferredOrder' may also  be  called  with  0  or  1
-arguments;  in  these  cases,  it  is   being   called   interactively
-(see~"IsACEGeneratorsInPreferredOrderI").
-
-For a presentation with more than one generator, the  first  generator
-of which is an involution and the second is  not,  {\ACE}  prefers  to
-switch the  first  two  generators.  `IsACEGeneratorsInPreferredOrder'
-returns `true' if the order of the  generators  <gens>  would  not  be
-changed  within  {\ACE}  and  `false',  otherwise.  (Technically,   by
-\lq{}involution' above, we really mean \lq{}a generator `x' for  which
-there is a relator in <rels> of form `x*x' or `x^2''. Such a generator
-may, of course, turn out to actually be the identity.)
-
 *Notes:* 
 To initiate the coset enumeration,  the  `start'  option  (see~"option
 start") is quietly inserted after the user's supplied options,  unless
@@ -336,14 +296,63 @@ precisely those for which, for the  arguments  <gens>  and  <rels>  of
 `ACECosetTable',   `IsACEGeneratorsInPreferredOrder'   would    return
 `false'.
 
+For an already  calculated  coset  table,  we  provide  the  following
+function to determine whether or not it has been standardised.
+
+\>IsACEStandardCosetTable( <table> [: <option>] ) F
+
+returns `true' if <table> (a list of lists of  integers)  is  standard
+according to {\GAP}'s default or  the  <option>  (either  `lenlex'  or
+`semilenlex')  standardisation  scheme,  or  `false'  otherwise.   See
+Section~"Coset  Table  Standardisation   Schemes"   for   a   detailed
+discussion of the `lenlex' and `semilenlex' standardisation schemes.
+
+*Note:*
+Essentially, `IsACEStandardCosetTable'  extends  the  {\GAP}  function
+`IsStandardized'.
+
+Users who wish their coset tables  to  use  `ACECosetTable'  with  the
+`lenlex'    (see~"option     lenlex")     option,     which     causes
+`lenlex'{\undoquotes\atindex{lenlex standardisation scheme} {@`lenlex'
+standardisation  scheme}}  standardisation  to  occur  at  the  {\ACE}
+(rather than {\GAP}) level, should be  aquainted  with  the  following
+function.
+
+\>IsACEGeneratorsInPreferredOrder( <gens>, <rels> ) F
+\label{IsACEGeneratorsInPreferredOrderNI}
+
+returns `true' if <gens>, a list of free group generators, are  in  an
+order which will  not  be  changed  by  {\ACE},  for  the  group  with
+presentation $\langle <gens> \mid <rels>\rangle$, where  <rels>  is  a
+list   of   relators   (i.e.~words   in   the   generators    <gens>).
+`IsACEGeneratorsInPreferredOrder' may also be called  in  a  different
+way         for         interactive          {\ACE}          processes
+(see~"IsACEGeneratorsInPreferredOrderI").
+
+For a presentation with more than one generator, the  first  generator
+of which is an involution and the second is  not,  {\ACE}  prefers  to
+switch the  first  two  generators.  `IsACEGeneratorsInPreferredOrder'
+returns `true' if the order of the  generators  <gens>  would  not  be
+changed  within  {\ACE}  and  `false',  otherwise.  (Technically,   by
+\lq{}involution' above, we really mean \lq{}a generator `x' for  which
+there is a relator in <rels> of form `x*x' or `x^2''. Such a generator
+may, of course, turn out to actually be the identity.)
+
 *Guru Notes:*
 If  `IsACEGeneratorsInPreferredOrder(<gens>,  <rels>)'  would   return
 `false', it is possible to enforce a user's order  of  the  generators
 within {\ACE}, by setting the option `asis' (see~"option asis")  to  1
-and, if `<gens>[1]' is `x' passing the relator that  determines  `x''s
-order is at most 2 as: `x*x' (rather than `x^2').  Behind  the  scenes
-this is precisely what is done, if necessary, when `ACECosetTable'  is
-called with the `lenlex' option.
+and, by passing the relator that determines that `<gens>[1]' (which we
+will assume is `x') has order  at  most  2,  as:  `x*x'  (rather  than
+`x^2').  Behind  the  scenes  this  is  precisely  what  is  done,  if
+necessary, when `ACECosetTable' is called with the `lenlex' option.
+
+The user may avoid all the technicalities  by  either  not  using  the
+`lenlex' option (and in {\GAP}~4.3 or later, allowing {\GAP}  to  take
+care of the `lenlex' standardisation), or by swapping  the  first  two
+generators          in           those           cases           where
+`IsACEGeneratorsInPreferredOrder(<gens>,   <rels>)'    would    return
+`false'.
 
 \enditems
 
@@ -359,7 +368,8 @@ don't want to  transfer the whole coset table  to {\GAP}, you can call
 \>ACEStats( <fgens>, <rels>, <sgens> [: <options>] ) F
 \label{ACEStatsNI}
 
-which returns a record with fields
+which calls {\ACE} non-interactively to do the coset enumeration,  the
+result of which is parsed and returned as a {\GAP} record with fields
 
 \beginitems
 
@@ -404,8 +414,8 @@ The fields of the  `ACEStats'  record  are  determined  by  parsing  a
 \lq{}results message' (see  Appendix~"The  Meanings  of  ACE's  Output
 Messages") from {\ACE}.
 
-`ACEStats' may also be called with 0 or 1 arguments; in  these  cases,
-it is being called interactively (see~"ACEStatsI").
+`ACEStats' may also be called in a different  way  in  an  interactive
+{\ACE} session (see~"ACEStatsI").
 
 \enditems
 
@@ -440,8 +450,8 @@ regarding the Use of Options"). `ACEStart' has a number of other forms
 The return value is an integer (numbering from 1) which represents the
 running process. (It is possible to have  more  than  one  interactive
 process running at once.) The integer returned may be  used  to  index
-which of these  processes  an  interactive  function  {\ACE}  function
-should be applied to.
+which of these processes an  interactive  {\ACE}  function  should  be
+applied to.
 
 An interactive {\ACE} process is terminated with the command
 
@@ -740,7 +750,7 @@ convenience, we provide the function
 
 \>InfoACELevel()
 
-which returns the current `InfoLevel' of `InfoACE' (i.e.~it is  simply
+which returns the current `InfoLevel' of `InfoACE', i.e.~it is  simply
 a shorthand for `InfoLevel(InfoACE)'.
 
 To set the `InfoLevel' of `InfoACE' we also provide
